@@ -4,6 +4,9 @@ Changelog
 1.3.1 (unreleased)
 ------------------
 
+- Automatically set the shop root on the portal upon new installation. #15
+  [jone]
+
 - Update German translations.
   [jone]
 
